--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
     <div style="width: 200px; height: 200px; background-color: brown; border-radius: 50px;border: 1px solid blue;">
 
     </div>
+
+    <a href="about.html">About</a>
 </body>
 
 </html>
