added iframe and website

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
     </div>
 
     <a href="about.html">About</a>
+
+    <iframe src="https://getbootstrap.com/" frameborder="0"></iframe>
 </body>
 
 </html>
