css positions done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <br><br>
         Password : <input type="password" />
         <br><br>
-        <button>Login</button>
+        <button id="btn">Login</button>
     </div>
 
     <!-- about -->
@@ -32,9 +32,13 @@
             accusamus. Ducimus!</p>
     </div>
 
+    <div class="pos">
+
+    </div>
+
     <!-- footer -->
     <div>
-        <input type="color" name="" id="">
+        <input class="text-box" type="color" name="" id="">
         <input type="file" name="" id="">
         <input type="email" placeholder="Email">
     </div>
@@ -69,6 +73,16 @@
     <a href="about.html">About</a>
 
     <iframe src="https://getbootstrap.com/" frameborder="0"></iframe>
+
+    <div class="my-div">
+
+    </div>
+
+    <div class="parent">
+        <div class="child">
+
+        </div>
+    </div>
 </body>
 
 </html>
