--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
 
         </div>
     </div>
+
+    <p class="my-para" id="our-para" style="color: darkgoldenrod;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi fuga aspernatur earum eveniet minus totam unde ex ipsam repudiandae tempora facere, illo ea incidunt expedita. Libero consequuntur asperiores impedit officia.</p>
+
+    <div style="color: red; font-weight: bold;">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad temporibus dignissimos qui omnis officiis aspernatur, eius rem dicta, rerum sapiente earum optio. Dolore a quis libero voluptatem nisi placeat iste.</p>
+    </div>
+
+    <div style="width: 400px; height: 400px; background-color: cornflowerblue; position: absolute; top: 5px;z-index: -1; opacity: 0.5;">
+    
+    </div>
 </body>
 
 </html>
